Fix alignment
All centralized now

--- a/assets/sass/modules/_latest-post.sass
+++ b/assets/sass/modules/_latest-post.sass
@@ -1,5 +1,6 @@
 .latest-post
   padding: 20px
+  margin: 0 auto
   color: #ffffff
   -webkit-background-size: cover
   -moz-background-size: cover
@@ -9,6 +10,7 @@
   article
     padding: 15px 35px 35px 35px
     max-width: 1028px
+    margin: 0 auto
     text-align: center
 
     a
